--- a/notes/day14-notes.html
+++ b/notes/day14-notes.html
@@ -836,6 +836,12 @@ fruits[<span class="dv">2</span>].<span class="at">tasty</span>     <span class=
 </blockquote>
 </div>
 </div>
+<div id="examples-of-d3-graphics" class="section level1">
+<h1>Examples of D3 graphics</h1>
+<ul>
+<li><a href="https://bl.ocks.org/">Popular Blocks</a></li>
+</ul>
+</div>
 <div id="acknowledgments" class="section level1 toc-ignore">
 <h1>Acknowledgments</h1>
 <ul>
